# untapped_data

./: .gitignore  QUICKSTART.md  README.md  app_config.py  desktop_launcher.py  package_desktop_bundle.sh  pyproject.toml  requirements.txt  run.py  start_desktop_app.bat  start_desktop_app.command  streamlit_app.py  untapped.py  untapped_selenium.py
deploy/mac/: Info.plist  UntappdBeerHistory  start_desktop_app.command
deploy/windows/: start_desktop_app.bat
documentation/: QUICKSTART.md  README.md
resources/: appicon.icns
src/: desktop_launcher.py  paths.py  run.py  untapped_selenium.py
src/untappd_beer_history/: __init__.py  __main__.py  app.py
