[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "untappd-beer-history"
version = "0.1.0"
description = "Native desktop exporter and dashboard for Untappd beer history."
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [
  { name = "Jacob Bickus" }
]

[tool.briefcase]
project_name = "Untappd Beer History"
bundle = "com.yacubusbishcus"
version = "0.1.0"
url = "https://github.com/yacubus-bishcus/untapped_data"
author = "Jacob Bickus"

[tool.briefcase.app.untappd_beer_history]
formal_name = "Untappd Beer History"
description = "Export Untappd beer history and open a local dashboard."
long_description = "A native desktop app for exporting Untappd beer history with Selenium and reviewing the results in a local Streamlit dashboard."
sources = [
  "src/untappd_beer_history",
  "src/app_config.py",
  "src/desktop_launcher.py",
  "src/paths.py",
  "src/run.py",
  "src/streamlit_app.py",
  "src/untapped.py",
  "src/untapped_selenium.py",
]
requires = [
  "urllib3<2",
  "streamlit",
  "plotly",
  "streamlit-plotly-events",
  "pandas",
  "requests",
  "beautifulsoup4",
  "selenium",
  "webdriver-manager",
]

[tool.briefcase.app.untappd_beer_history.macOS]
requires = [
  "toga-cocoa",
]
icon = "resources/appicon"
min_os_version = "11.0"
